@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!--  
+	Zipato VS-ZD2102 Door/Window Sensor 
+	https://www.zipato.com/wp-content/uploads/2015/09/vs-zd2102-Zipato-Door-Window-Sensor-User-Manual-v1.4.pdf
+	-->
+	
+	<!-- COMMAND_CLASS_BASIC -->
+	<CommandClass id="32" setasreport="true"/>
+
+	<!-- COMMAND_CLASS_ALARM AlarmCmd_Get responds with an undocumented value -->
+	<CommandClass id="113" getsupported="false" />
+
+	<!-- COMMAND_CLASS_ASSOCIATION -->
+	<CommandClass id="133">
+		<Associations num_groups="1">
+			<Group index="1" max_associations="5" label="Lifeline" />
+		</Associations>
+	</CommandClass>
+</Product>
